--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-setuptools>12
-wheel
+setuptools==18.0.1
+wheel==0.24.0
 
-sphinx
-setuptools_scm
+sphinx==1.3.1
+setuptools_scm==1.5.5
 
-devpi_client
+devpi_client==2.3.0
